--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A lib to extract, parse, modify and save.miz files from DCS World",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node test.ts"
+    "start": "ts-node -r dotenv/config index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^14.14.6",
+    "dotenv": "^8.2.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
